--- a/dotNetLab2/ClientApp/src/app/movies/movies-list/movies-list.component.html
+++ b/dotNetLab2/ClientApp/src/app/movies/movies-list/movies-list.component.html
@@ -4,41 +4,40 @@
 
 <p *ngIf="!movies"><em>Loading...</em></p>
 
-<div *ngIf="products">
-  <p>Total # of products: {{ products.totalEntities }}.</p>
+<div *ngIf="movies">
+  <p>Total # of movies: {{ movies.totalEntities }}.</p>
 
   <nav aria-label="Page navigation example">
     <ul class="pagination">
 
 
-      <li class="page-item" *ngFor="let first of products.firstPages">
-        <a [routerLink]="" class="page-link" (click)="getProducts(first)">{{first}}</a>
+      <li class="page-item" *ngFor="let first of movies.firstPages">
+        <a [routerLink]="" class="page-link" (click)="getMovies(first)">{{first}}</a>
       </li>
 
       <li class="page-item disabled">
         <a [routerLink]="" class="page-link">...</a>
       </li>
 
-      <li class="page-item" *ngFor="let previous of products.previousPages">
-        <a [routerLink]="" class="page-link" (click)="getProducts(previous)">{{previous}}</a>
+      <li class="page-item" *ngFor="let previous of movies.previousPages">
+        <a [routerLink]="" class="page-link" (click)="getMovies(previous)">{{previous}}</a>
       </li>
 
       <li class="page-item active">
         <a class="page-link" [routerLink]="">{{currentPage}} <span class="sr-only">(current)</span></a>
       </li>
 
-      <li class="page-item" *ngFor="let next of products.nextPages">
-        <a [routerLink]="" class="page-link" (click)="getProducts(next)">{{next}}</a>
+      <li class="page-item" *ngFor="let next of movies.nextPages">
+        <a [routerLink]="" class="page-link" (click)="getMovies(next)">{{next}}</a>
       </li>
 
-      <!--<li class="page-item disabled" *ngIf="products.elipsesAfterNext">-->
       <li class="page-item disabled">
         <a [routerLink]="" class="page-link">...</a>
       </li>
 
 
-      <li class="page-item" *ngFor="let last of products.lastPages">
-        <a [routerLink]="" class="page-link" (click)="getProducts(last)">{{last}}</a>
+      <li class="page-item" *ngFor="let last of movies.lastPages">
+        <a [routerLink]="" class="page-link" (click)="getMovies(last)">{{last}}</a>
       </li>
     </ul>
   </nav>
@@ -59,7 +58,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let movie of movies">
+      <tr *ngFor="let movie of movies.entities">
         <td>{{ movie.title }}</td>
         <td>{{ movie.description }}</td>
         <td>{{ movie.gender }}</td>
